# mitm-single-node

./: .gitignore  AbstractClawProblem.hpp  AbstractCollisionProblem.hpp  AbstractDomain.hpp  CMakeLists.txt  README.md  base_engine.hpp  claw_engine.hpp  collision_engine.hpp  common.hpp  create_executables.py  demo.cpp  dict.hpp  egine.hpp  engine.hpp  mitm.hpp  mitm_sequential.hpp  mpi_common.hpp  naive_engine.hpp  parallel_engine.hpp  parallel_run_experiments_collision.py  prequisit.sh  receiver.hpp  run_experiments.py  run_experiments_collision.py  sender.hpp  summary_collisions.ipynb  valgrind-output
config/: avx2.c  avx2.cmake  avx512.cmake
data/: analayze_ndistinguihsed_points.ipynb  claw_summary.csv  claw_summary.csv.normal.csv  claw_summary.csv.old  claw_summary.csv.skip_bad_collision.csv  claw_summary.csv.stop_on_witiness.csv  claw_summary.csv.stop_on_witnessing  claw_test  collision_summary.csv
demos/: basic_demo.cpp  bits_lib.hpp  crax-demo.cpp  sha256_x86.c  sha2_claw_demo.cpp  sha2_collision_1collision_demo.cpp  sha2_collision_demo.cpp  sha2_demo.cpp  sha2_demo_C.cpp  speck32.hpp  speck32_demo.cpp
docs/: AbstractClawProblem.hpp  AbstractCollisionProblem.hpp
examples/: CMakeLists.txt  aes.c  des56.ua  double_DES_demo.cpp  double_DES_problem.hpp  double_aes_demo.cpp  double_aes_problem.hpp  double_des_demo.cpp  double_des_problem.hpp  double_speck32_demo.cpp  double_speck64_demo.cpp  double_speck64_problem.hpp  mpi_double_DES_bench.cpp  mpi_double_aes_bench.cpp  mpi_double_speck64_bench.cpp  mpi_double_speck64_demo.cpp  mpi_naive_double_speck64_demo.cpp  mpi_sha2_big_collision_demo.cpp  sha256.c  sha2_claw_demo.cpp  sha2_collision_demo.cpp  speck3264.c  speck64128.c  usuba_des.c  usuba_des.cpp
examples/scripts/: run_data_collection.sh  run_experiments_claw.py
include/: AES.hpp  AbstractCollisionProblem.hpp  claw_engine.hpp  collision_engine.hpp  common.hpp  counters.hpp  dict.hpp  engine.hpp  engine_common.hpp  engine_mpi.hpp  engine_omp.hpp  memory.hpp  mitm.hpp  mpi_common.hpp  mpi_controller.hpp  mpi_engine.hpp  mpi_naive.hpp  mpi_naive_alltoall.hpp  mpi_naive_isend.hpp  mpi_receiver.hpp  mpi_sender.hpp  naive_engine.hpp  naive_mitm.hpp  omp_engine.hpp  parallel_engine.hpp  prng.hpp  problem.hpp  receiver.hpp  sender.hpp  timing.hpp  tools.hpp  types.h  util_file_system.hpp
include/mpi/: common.hpp  naive_alltoall.hpp  naive_isend.hpp  pcs_controller.hpp  pcs_engine.hpp  pcs_receiver.hpp  pcs_sender.hpp
include/openmp/: pcs_engine.hpp
include/sequential/: naive.hpp  pcs_engine.hpp
include/util/: folder_creator.hpp  memory.hpp  prng.hpp  timing.hpp
performance/: cachelines.cpp  collisions_summary.csv  process_collisions_summary.py  summary_collision.csv  summary_collisions.ipynb
